# LTL_stack

./: .gitignore  README.md
controller_executor/: CMakeLists.txt  package.xml  setup.py
controller_executor/examples/adhoc/: adhoc.aut  adhoc.yaml  adhoc_all.launch  adhoc_executor.launch  adhoc_propositions.launch  setup_launch_adhoc.yaml
controller_executor/examples/adhoc2/: adhoc2.slugsin  adhoc2.yaml  adhoc2_all.launch  adhoc2_executor.launch  adhoc2_propositions.launch  setup_launch_adhoc2.yaml
controller_executor/examples/firefighting/: firefighting.yaml  (+6 more)
controller_executor/launch/: apriltags_example.launch  example_all.launch  example_background.launch  example_background_gazebo_turtlebot.launch  example_executor.launch  example_propositions.launch
controller_executor/msg/: stringKeyBoolValueDict.msg
controller_executor/proposition_nodes/: check_if_tag_within_reach.py  color_sensor.py  dummy_actuator.py  find_any_tag.py  forward_info.py  forward_info_sensor.py  forward_pose.py  get_tag.py  in_region.py  is_robot_at_location.py  manipulator_pickup_action.py  motion_planner.py  node_logging.py  object_in_gripper.py  plan_manipulator_path.py  plot_reachable_points.py  reach_tag_and_plan_manipulator_path.py  robot_location.py  robot_navigation.py  set_color.py  set_velocity.py  start_ros_node.py  test_723_r547.py  test_723_r550.py  test_723_which_region.py  test_806_hallway.py~  test_806_r551.py~  test_806_which_region.py~  test_806_whichlabel_region.py~  tk_button.py  tk_textbox.py  tk_textbox.py~  xyz_coordinates.py
rqt_grounding_and_analysis/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_grounding_and_analysis/resource/: MappingAndAnalysisPlugin.ui
slugs_ros/: CMakeLists.txt  package.xml  setup.py
slugs_ros/action/: SlugsSynthesis.action
slugs_ros/scripts/: test_action_client.py
slugs_ros/src/slugs_ros/: executor_standalone.py  proposition_monitor_standalone.py  slugs_logging.py  slugs_requests.py  slugs_requests.py~  slugs_startup_server.py  slugs_startup_server_base.py  slugs_startup_server_base.py~  slugs_startup_server_ros.py  slugs_startup_server_standalone.py
slugs_ros/srv/: SlugsGetOutputs.srv  SlugsInitExecutionArray.srv  SlugsInitExecutionString.srv  SlugsTransExecutionString.srv
srv/: SlugsGetInputs.srv  SlugsSetGoal.srv  SlugsTransExecutionArray.srv
(+170 files in other folders)
